PP-368: Fix meeting calendar layout on mobile.

--- a/public/themes/custom/helfi_paatokset/src/scss/components/block/_meetings_calendar.scss
+++ b/public/themes/custom/helfi_paatokset/src/scss/components/block/_meetings_calendar.scss
@@ -44,6 +44,7 @@
   .days-grid {
     display: grid;
     gap: 30px;
+    padding-left: 0;
 
     @include breakpoint($breakpoint-l) {
       display: flex;
